name:                pandora-primary
version:             0.1.0
synopsis:            ...
description:         ...
homepage:            https://github.com/iokasimov/pandora-primary
license:             MIT
license-file:        LICENSE
extra-source-files:  CHANGELOG.md
author:              Murat Kasimov
maintainer:          Murat Kasimov <iokasimov.m@gmail.com>
copyright:           Copyright (c) 2019 Murat Kasimov
category:            Data, Control
build-type:          Simple
cabal-version:       >= 1.10

source-repository head
  type: git
  location: https://github.com/iokasimov/pandora-primary.git

library
  build-depends: ghc-prim == 0.5.3, pandora == 0.1.0
  exposed-modules: Pandora.Primary, Pandora.Primary.IO
  default-language: Haskell2010
  default-extensions: MagicHash, NoImplicitPrelude, PackageImports, UnboxedTuples
  ghc-options: -fno-warn-tabs
